[tool.poetry]
name = "qiskit-starter-kit"
version = "0.1.0"
description = ""
authors = ["mi2valley <monocoin189@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
qiskit = {version = "1.0.2", extras = ["visualization"]}
jupyter = "^1.0.0"
qiskit-ibm-runtime = "^0.23.0"
python-dotenv = "^1.0.1"
qiskit-ibm-provider = "^0.11.0"
qiskit-aer = "^0.14.2"
matplotlib = "^3.9.0"
pylatexenc = "^2.10"
prototype-zne = "^1.3.1"
qc-grader = {git = "https://github.com/qiskit-community/Quantum-Challenge-Grader.git"}
graphviz = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
