[tool.poetry]
name = "qiskit-starter-kit"
version = "0.1.0"
description = ""
authors = ["mi2valley <monocoin189@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
qiskit = {extras = ["visualization"], version = "^2.3.0"}
jupyter = "^1.1.1"
qiskit-ibm-runtime = "^0.45.0"
python-dotenv = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
